# EAE_Firmware

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
scripts/: build.py  run.py
src/: can.cpp  can.h  main.cpp  pid.cpp  pid.h  state_machine.cpp  state_machine.h
tests/: CMakeLists.txt  test_pid.cpp
